tests/miz/pass/parser/pass_parser_reconsider_tails_001.miz
reconsider x as set;
reconsider y = x as set
proof
  thus thesis;
end;
