tests/miz/fail/types/fail_type_elaboration_proof_skeleton_gap_001.miz
theorem ProofSkeletonPayloadBoundary: thesis proof
  thus thesis;
end;
